--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-    info: "master branch,turorial-spring-cloud-config/config-dev.yml version=3"
+    info: "master branch,turorial-spring-cloud-config/config-dev.yml   curl -X POST "http://localhost:3355/actuator/refresh"  version=4"
